# digit-recognition

./: README.md  pyproject.toml
data/: README.md
docs/: specification.md  weekly_report_1.md  weekly_report_2.md
src/digitrecognition/: image_representation.py  nearest_point.py  offsets.py
tests/: README.md  test_image_representation.py  test_nearest_point.py  test_offset.py
